--- a/Assignment - Responsive Website Basic/css/style.css
+++ b/Assignment - Responsive Website Basic/css/style.css
@@ -5,12 +5,23 @@
         }
         
         h1 {
-            margin-bottom: 15px;
+            margin-bottom: 50px;
+            text-align: center;
         }
         
-        p {
-            border: 1px solid black;
-            background-color: #A52A2A;
+        div#container {
+            /*Changes 2 - below 1 line */
+            position: relative;
+            /*Changes 3 - below 1 line */
+        }
+        
+        p.title1 {
+            border: 3px solid black;
+        }
+        
+        p.text {
+            border: 3px solid black;
+            background-color: grey;
             width: 90%;
             height: 150px;
             margin-right: auto;
@@ -25,7 +36,7 @@
         }
         /************Larger Devices Only************/
         
-        @media (min-width: 1200px) {
+        @media (min-width: 992px) {
             /*col-colum,lg-large */
             .col-lg-1,
             .col-lg-2,
@@ -40,7 +51,7 @@
             .col-lg-11,
             .col-lg-12 {
                 float: left;
-                border: 1px solid green;
+                /* border: 1px solid green; */
             }
             .col-lg-1 {
                 width: 8.33%;
@@ -81,8 +92,8 @@
         }
         /************Medium Devices Only************/
         
-        @media (min-width: 950px) and (max-width: 1199px) {
-            /*col-colum,lg-large */
+        @media (min-width: 768px) and (max-width: 991px) {
+            /*col-colum,md-medium */
             .col-md-1,
             .col-md-2,
             .col-md-3,
@@ -96,7 +107,7 @@
             .col-md-11,
             .col-md-12 {
                 float: left;
-                border: 1px solid green;
+                /* border: 1px solid green; */
             }
             .col-md-1 {
                 width: 8.33%;
@@ -132,6 +143,62 @@
                 width: 91.66%;
             }
             .col-md-12 {
+                width: 100%;
+            }
+        }
+        /************Small Devices Only************/
+        
+        @media (max-width: 767px) {
+            /*col-colum,sm-small */
+            .col-sm-1,
+            .col-sm-2,
+            .col-sm-3,
+            .col-sm-4,
+            .col-sm-5,
+            .col-sm-6,
+            .col-sm-7,
+            .col-sm-8,
+            .col-sm-9,
+            .col-sm-10,
+            .col-sm-11,
+            .col-sm-12 {
+                float: left;
+                /* border: 1px solid green; */
+            }
+            .col-sm-1 {
+                width: 8.33%;
+            }
+            .col-sm-2 {
+                width: 16.66%;
+            }
+            .col-sm-3 {
+                width: 25%;
+            }
+            .col-sm-4 {
+                width: 33%;
+            }
+            .col-sm-5 {
+                width: 41.66%;
+            }
+            .col-sm-6 {
+                width: 50%;
+            }
+            .col-sm-7 {
+                width: 58.33%;
+            }
+            .col-sm-8 {
+                width: 66.66%;
+            }
+            .col-sm-9 {
+                width: 74.99%;
+            }
+            .col-sm-10 {
+                width: 83.33%;
+            }
+            .col-sm-11 {
+                width: 91.66%;
+            }
+            .col-sm-12 {
                 width: 100%;
             }
         }
